Fix config Player "location" to "directory"
Fix config variable in Player and add proper tilde expansion
Show database statistics in the Info modal
Update change "downloading video" to "downloading video and converting"
Update formatting
Remove an extra init load for player.updateControls
Update todo
Update database may now "update" the client correctly and notifies the client
Update console messages on the server

--- a/config.cfg
+++ b/config.cfg
@@ -40,7 +40,7 @@
 
 ### Set Download Player download location
 ### Default: "./downloads"
-#location = "~/Music"
+#directory = "~/Music"
 
 ### Set the default volume of the Download Player
 ### Default: 0.50
