--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "expand-tilde": "^1.2.0",
     "express": "^4.13.3",
     "floatthead": "^1.2.12",
     "fs": "0.0.2",
