Now using bower for certain components
Add a bug I noticed into todo.md
Made default-thin.less use a variable for the bootstrap location

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.swp
 *.swo
 node_modules
+bower_components
 public/css/overwrite.css
 public/css/jquery.contextMenu.css
 public/css/themes/default.css
