Fix a few "go to current" related visual bugs
Fix updating the playlist twice during 'moveToCurrent'
Fix case sensitive sorting
Add setting to hide 'unknown' text for less clutter (feature request
from a friend)
Update server disconnect checking (add button to force a rerty, and
a timer showing on the notification)
Update formatting
Update description

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "MPCParty",
-  "description": "Another MPC web client meant for multi-user usage.",
+  "description": "Another MPD web client meant for multi-user usage.",
   "main": "server.js",
   "authors": [
     "Jeremy Plsek"
