--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MPCParty",
   "version": "0.2.0",
-  "description": "Another MPC web client meant for multi-user usage.",
+  "description": "Another MPD web client meant for multi-user usage.",
   "main": "server.js",
   "author": "Jeremy Plsek",
   "license": "LGPL-3.0",
