--- a/utils/mpcparty.service
+++ b/utils/mpcparty.service
@@ -1,9 +1,15 @@
+[Unit]
+Description=A Web Server Frontend for Music Player Daemon
+After=mpd.service
+
 [Service]
-ExecStart=/usr/bin/nodejs /location/to/server.js
-Restart=always
-User=mpd
-Group=nobody
-Environment=NODE_ENV=production
+Type=forking
+User=dank
+Group=dank
+WorkingDirectory=/home/dank/mpcparty
+ExecStart=/usr/bin/screen -dmS mpcparty /usr/local/bin/forever /home/dank/mpcparty/server.js 
+ExecStop=/usr/bin/screen -S mpcparty -X quit
 
 [Install]
 WantedBy=multi-user.target
+
