Add basic hot keys to playlist modals
Add uppercase to materialish buttons
Add clear button to save playlist
Remove unwanted css that I forgot to ignore in the last commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 *.swo
 node_modules
 bower_components
-public/css/overwrite.css
-public/css/jquery.contextMenu.css
-public/css/themes/default.css
-public/css/themes/default-thin.css
+*.css
+!public/css/jquery-ui.min.css
 downloads/*
