change config variable back to false.
I really should create a config.default file or something...

--- a/config.cfg
+++ b/config.cfg
@@ -19,7 +19,7 @@
 [vote]
 ### Enable vote skipping (set to false if you are having issues with voting)
 ### Default: true
-enabled = false
+#enabled = false
 
 ### Vote skipping percentage. 0.75 = 3/4 clients need to vote in order for a
 ### skip to be successful
