--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "express": "^4.13.4",
     "fs": "0.0.2",
     "http": "0.0.0",
-    "jade": "~1.11.0",
     "komponist": "~0.1.0",
     "less-middleware": "^2.0.1",
     "player": "^0.6.1",
+    "pug": "^2.0.0-alpha7",
     "toml": "^2.3.0",
     "ws": "^1.0.1",
     "youtube-dl": "^1.10.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jplsek/MPCParty.git"
   }
 }
