--- a/config.cfg
+++ b/config.cfg
@@ -52,3 +52,8 @@
 ### duplicates.
 ### Default: true
 #keep_videos = false
+
+[testing]
+# Used for unit testing. This should only be enabled during development.
+### Default: false
+#enabled = true
