--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MPCParty",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Another MPD web client meant for multi-user usage.",
   "main": "server.js",
   "author": "Jeremy Plsek",
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "browserify-middleware": "^7.0.0",
     "expand-tilde": "^1.2.0",
     "express": "^4.13.4",
     "fs": "0.0.2",
