--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,7 @@
 ### To set custom config:
 ### Remove the "#" before a variable, for example:
 ### "#port = 8080" to "port = 8080"
+### Note to Windows users: you need to use "\\" for folder separators.
 
 [server]
 ### The web port to be used.
@@ -15,6 +16,11 @@
 ### The MPD port of the url
 ### Default: 6600
 #port = 6600
+
+### The music library location that MPD also uses. This is used for extra
+### features such as music downloading and album art detection (WIP).
+### Default: ""
+#library = "~/Music"
 
 [vote]
 ### Enable vote skipping (set to false if you are having issues with voting)
@@ -33,25 +39,23 @@
 ### Default: false
 #enabled = true
 
-[player]
-### Enable the Download Player
+[downloader]
+### Enable the Downloader
 ### Default: true
 #enabled = false
 
-### Set Download Player download location
-### Default: "./downloads"
-#directory = "~/Music"
-
-### Set the default volume of the Download Player
-### Default: 0.50
-#volume = 0.90
+### Set the Downloader download location for the clients RELATIVE to the
+### MPD library location. Note: Having ".." in the name is possible. Make sure
+### your permissions are properly set on your system!
+### Default: "Downloads"
+#directory = ""
 
 ### Set whether or not to keep the downloaded videos after conversion to mp3.
 ### If you are changing the "location" you may want to set this to false.
 ### Note that setting this to false will download videos even when there are
 ### duplicates.
-### Default: true
-#keep_videos = false
+### Default: false
+#keep_videos = true
 
 [testing]
 # Used for unit testing. This should only be enabled during development.
