--- a/config.cfg
+++ b/config.cfg
@@ -18,7 +18,7 @@
 #port = 6600
 
 ### The music library location that MPD also uses. This is used for extra
-### features such as music downloading and album art detection (WIP).
+### features such as music downloading and album art detection.
 ### Default: ""
 #library = "~/Music"
 
@@ -40,7 +40,8 @@
 #enabled = true
 
 [downloader]
-### Enable the Downloader
+### Enable the Downloader (note: "library" needs to be set for this to actually
+### be enabled)
 ### Default: true
 #enabled = false
 
