--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify-middleware": "^7.0.0",
     "expand-tilde": "^1.2.0",
     "express": "^4.13.4",
+    "express-minify": "^0.2.0",
     "fs": "0.0.2",
     "glob": "^7.1.1",
     "http": "0.0.0",
