playlist buffer -> playlist editor

--- a/config.cfg
+++ b/config.cfg
@@ -20,7 +20,7 @@
 ### The music library location that MPD also uses. This is used for extra
 ### features such as music downloading and album art detection.
 ### Default: ""
-#library = "~/Music"
+library = "C:\\Music"
 
 [vote]
 ### Enable vote skipping (set to false if you are having issues with voting)
@@ -34,8 +34,8 @@
 
 [users]
 ### Show user lists to clients (shows hostnames via DNS if possible). This may
-### be "removed" in the future if support for sharing playlist buffers is
-### added, in which case you would disable sharing of the playlist buffers.
+### be "removed" in the future if support for sharing the playlist editor is
+### added, in which case you would disable sharing of the playlist editor.
 ### Default: false
 #enabled = true
 
@@ -43,7 +43,7 @@
 ### Enable the Downloader (note: "library" needs to be set for this to actually
 ### be enabled)
 ### Default: true
-#enabled = false
+enabled = false
 
 ### Set the Downloader download location for the clients RELATIVE to the
 ### MPD library location. Note: Having ".." in the name is possible. Make sure
@@ -61,4 +61,4 @@
 [testing]
 # Used for unit testing. This should only be enabled during development.
 ### Default: false
-#enabled = true
+enabled = true
