undo some config changes from previous commit

--- a/config.cfg
+++ b/config.cfg
@@ -20,7 +20,7 @@
 ### The music library location that MPD also uses. This is used for extra
 ### features such as music downloading and album art detection.
 ### Default: ""
-library = "C:\\Music"
+library = "~/Music"
 
 [vote]
 ### Enable vote skipping (set to false if you are having issues with voting)
@@ -43,7 +43,7 @@ library = "C:\\Music"
 ### Enable the Downloader (note: "library" needs to be set for this to actually
 ### be enabled)
 ### Default: true
-enabled = false
+#enabled = false
 
 ### Set the Downloader download location for the clients RELATIVE to the
 ### MPD library location. Note: Having ".." in the name is possible. Make sure
@@ -61,4 +61,4 @@ enabled = false
 [testing]
 # Used for unit testing. This should only be enabled during development.
 ### Default: false
-enabled = true
+#enabled = true
