Update to bootstrap4 just cuz
Also change the ranges to custom js progress bars because of issues with
verticality.
There are still a few bootstrap realted bugs, like dropdowns not being
right aligned, so I'm gonna sit on this a bit until that is fixed.

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "bootstrap": "4.0.0-beta",
     "toastr": "^2.1.2",
     "jQuery-contextMenu": "^2.1.1",
     "dragula.js": "dragula#^3.7.2"
