--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "expand-tilde": "^1.2.0",
     "express": "^4.13.4",
     "express-minify": "^0.2.0",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.2",
     "glob": "^7.1.1",
     "http": "0.0.0",
     "komponist": "~0.1.0",
-    "less-middleware": "^2.0.1",
+    "node-sass-middleware": "^0.11.0",
+    "popper.js": "1.11.0",
     "pug": "^2.0.0-alpha7",
     "toml": "^2.3.0",
     "ws": "^1.0.1",
