--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "fs": "0.0.2",
     "glob": "^7.1.1",
     "http": "0.0.0",
-    "komponist": "~0.1.0",
+    "mpc-js": "^1.2.1",
     "node-sass-middleware": "^0.11.0",
+    "node-websockify": "^1.0.0",
     "popper.js": "1.11.0",
     "pug": "^2.0.0-alpha7",
+    "socket.io": "^2.0.3",
     "toml": "^2.3.0",
-    "ws": "^1.0.1",
     "youtube-dl": "^1.10.5"
   },
   "repository": {
