--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
   "author": "Jeremy Plsek",
   "license": "LGPL-3.0",
   "scripts": {
-    "preinstall": "bower install",
     "start": "node server.js"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "browserify-middleware": "^8.1.1",
+    "dragula": "^3.7.2",
     "expand-tilde": "^2.0.2",
     "express": "^4.16.3",
     "express-minify": "^1.0.0",
+    "floatthead": "^2.1.2",
     "fs": "0.0.2",
     "glob": "^7.1.1",
     "http": "0.0.0",
+    "jquery": "2.2.4",
+    "jquery-contextmenu": "^2.7.0",
     "komponist": "~0.1.0",
     "less-middleware": "^3.0.1",
     "pug": "^2.0.3",
+    "toastr": "2.1.0",
     "toml": "^2.3.3",
     "ws": "^5.2.1",
     "youtube-dl": "^1.12.2"
