--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Jeremy Plsek",
   "license": "LGPL-3.0",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint src/* server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -33,5 +34,13 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/jplsek/MPCParty.git"
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
